tests/sksl/errors/InVarWithInitializerExpression.dsl.glsl
### Compilation failed:

error: 'in' variables cannot use initializer expressions

1 error
